took reviews call our of main module and now done ad-hoc in controller. Also fixed text wrapping for cards in the carousel and vertical alignment on expand (all at the top)

--- a/app/styles/modules/_carousel.scss
+++ b/app/styles/modules/_carousel.scss
@@ -126,6 +126,7 @@
     slide{
        font-size: 12px;
       .slide-item{
+        vertical-align: top;
         display: inline-block;
         .product-card{
           width: 100%;
