--- a/app/styles/modules/_product-card.scss
+++ b/app/styles/modules/_product-card.scss
@@ -67,6 +67,7 @@ $lines-to-show-title: 2;
     flex-grow: 1;
     width: 100px;
     margin-right: 5px;
+    white-space: normal;
     .product-text{
       // min-height: 7em;
     }
